# contextforge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
contextforge/: __init__.py  _logging.py  core.py  plan.py  transform.py
contextforge/commit/: __init__.py  core.py  patch.py
contextforge/context/: __init__.py  builder.py
contextforge/errors/: __init__.py  commit.py  context.py  extract.py  patch.py  path.py
contextforge/extract/: __init__.py  diffs.py  extract.py  files.py  main.py  metadata.py
contextforge/models/: __init__.py  blocks.py  fence.py
contextforge/system/: __init__.py
contextforge/utils/: __init__.py  fs.py  gitignore.py  language.py  parsing.py  paths.py  text.py  tree.py
tests/: conftest.py  test_commit_patch.py  test_logging_opt_in.py
tests/commit/: test_commit_core.py  test_commit_core_fs_matrix.py  test_commit_core_paths.py  test_commit_patch_extra.py  test_commit_patch_more.py  test_commit_patch_parsers.py
tests/context/: test_context_builder.py  test_context_security_and_gitignore.py
tests/contextforge/: test_core.py  test_diff_extraction_scenarios.py  test_file_based_scenarios.py  test_logging.py  test_plan.py  test_progressive_diffs.py  test_transform.py
tests/contextforge/commit/: test_commit_core.py  test_commit_core_fs_matrix.py  test_commit_patch_file_based_scenarios.py  test_commit_patch_more.py  test_commit_patch_parsers.py  test_commit_patch_unhinged.py  test_patch.py
tests/contextforge/context/: test_context_security_and_gitignore.py
tests/contextforge/extract/: test_comprehensive_extraction.py  test_custom_patch_format.py  test_diff_extractor.py  test_extract_blocks_from_text.py  test_extract_file_based_scenarios.py  test_file_deduplication.py  test_files.py  test_fuzzy_diff_match.py  test_search.py  test_search_replace.py
tests/contextforge/utils/: test_fs.py  test_text.py
tests/extract/: test_diff_extractor.py  test_extract_blocks_from_text.py  test_fuzzy_diff_match.py  test_metadata_inference.py
tests/files/: blan.test.txt  dupe.test.txt  dupeclean.test.txt  git.test.txt  offset.test.txt
tests/files/diff/: add.test.txt  app.test.txt  audiosync-partial.test.txt  audiosync.test.txt  blank.test.txt  boxmd.test.txt  git_branch.test.txt  notifications.test.txt  odddiff.test.txt  pastetotask.test.txt  peer.test.txt  settings.test.txt  use-delta.test.txt  voice-channel-manager.test.txt  workspace.test.txt  wsstate.test.txt
tests/files/extract/: lots.test.txt  unwrappeddiff.test.txt
tests/system/: test_system_edge_cases.py  test_system_helpers.py
